# rid

./: .gitignore  Cargo.toml  DOCS.md  README.md  TDL  config.toml  env  install.sh  meta  release.sh  rid.sh  utils  versions
defaults/: kernelconfig
examples/: cache.rs  check_upstream.rs  dependencies.rs  download.rs  install.rs  install_with_dependencies.rs  list.rs  news.rs  outdated.rs  prune.rs  remove.rs  remove_with_dependencies.rs  search.rs  sync.rs  update.rs  update_with_dependencies.rs  validate_links.rs
meta/: cmake  curl  e2fsprogs  ffmpeg  hwdata  libidn2  libpsl  libtasn1  libunistring  libxml2  llvm  make-ca  mpv  nspr  nss  p11-kit  playerctl  rid  tree
rbin/: 32cm  32mn  cbf  cm  die  mint  mkefi  mn  raw  xt
sets/: glfs  glfs-audio  glfs-basicx  glfs-graphics  glfs-net  glfs-sec  glfs-steam  glfs-x11  lfs  tlfs  xorg-apps  xorg-libs
src/: args.rs  bootstrap.rs  checks.rs  clean.rs  cmd.rs  config.rs  core.rs  defargs.rs  directions.rs  examples.rs  fetch.rs  flags.rs  init.rs  linkval.rs  macros.rs  main.rs  misc.rs  options.rs  package.rs  paths.rs  pm.rs  resolve.rs  resolvedeps.rs  sets.rs  tracking.rs  upstream.rs  utils.rs
utils/: meta-interface.sh  overwrite-dir.sh  unpriv.sh
