[package]
name = "rid"
version = "0.24.1" # improvements to --news, allowed dead code for examples.rs
description = "My source-based package manager for LFS"
license = "GPL"
repository = "https://github.com/Toxikuu/rid"
readme = "README.md"
documentation = "https://github.com/Toxikuu/rid/blob/master/DOCS.md"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
indicatif = "0.17.8"
lazy_static = "1.5.0"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
strsim = "0.11.1"
toml = "0.8.19"
ureq = "2.10.1"
whoami = { version = "1.5.2", default-features = false }
